Page MenuHome GnuPG

GPGSM: Use estream_t instead of FD
Closed, ResolvedPublic

Description

In gnupg/sm, there are places where we use FD and then es_fdopen_nc. To match the internal API, in server.c, we use translate_sys2libc_fd to get FD.
It works.

On Windows, it means that the HANDLE is translated to FD and then is composed into the estream. Strictly speaking, the resource for FD is leaked.
We can compose the estream by HANDLE, that's the way to go.

Revisions and Commits

Event Timeline

gniibe triaged this task as Normal priority.Jul 13 2023, 3:51 AM
gniibe created this task.
gniibe created this object with edit policy "Contributor (Project)".
gniibe changed the task status from Open to Testing.Jul 25 2023, 4:08 AM

Applied to master.